--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.3",
     "axios": "^1.7.5",
+    "clsx": "^2.1.1",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "eslint": "^8",
